swagger users description
