# app/Http/Controllers/Swagger/UserController.php
@@ -1,44 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Swagger;
-
-use App\Http\Controllers\Controller;
-
- /**
- * @OA\Post(
- *     path="/users",
- *     summary="Adds a new user - with oneOf examples",
- *     tags={"users"},
- *     @OA\RequestBody(
- *         @OA\MediaType(
- *             mediaType="application/json",
- *             @OA\Schema(
- *                 @OA\Property(
- *                     property="id",
- *                     type="string"
- *                 ),
- *                 @OA\Property(
- *                     property="name",
- *                     type="string"
- *                 ),
- *                 @OA\Property(
- *                     property="phone",
- *                     oneOf={
- *                     	   @OA\Schema(type="string"),
- *                     	   @OA\Schema(type="integer"),
- *                     }
- *                 ),
- *                 example={"id": "a3fb6", "name": "Jessica Smith", "phone": 12345678}
- *             )
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="OK",
- *     )
- * )
- */
-class UserController extends Controller
-{
-    //
-}
